Added Shelf and asset plugin

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2021"
 [dependencies]
 bevy = "0.10.1"
 bevy-inspector-egui = "0.18.3"
-bevy_asset_loader = "0.16.0"
+bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
