--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 bevy = "0.10.1"
 bevy-inspector-egui = "0.18.3"
 bevy_asset_loader = { version = "0.16.0", features = ["2d"] }
+bevy_kira_audio = { version = "0.15.0", features = ["ogg"] }
